k8s/src/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: nodejs-microservice
  name: worker
spec:
  selector:
    app: worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
 namespace: nodejs-microservice
 name: front-end
spec:
 selector:
   app: front-end
 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
