k8s/src/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nodejs-microservice
  name: worker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: worker.k8s.homelab.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: worker
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nodejs-microservice
  name: front-end
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: front-end.k8s.homelab.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: front-end
                port:
                  number: 80
